--- a/modules/gateway/assertions/NtlmAuthenticationAssertion/src/main/java/com/l7tech/external/assertions/ntlm/console/NtlmAuthenticationPropertiesDialog.form
+++ b/modules/gateway/assertions/NtlmAuthenticationAssertion/src/main/java/com/l7tech/external/assertions/ntlm/console/NtlmAuthenticationPropertiesDialog.form
@@ -163,7 +163,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="bea99" class="javax.swing.JLabel">
+          <component id="bea99" class="javax.swing.JLabel" binding="variablePrefixLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -186,7 +186,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="6db1d" class="javax.swing.JLabel">
+          <component id="6db1d" class="javax.swing.JLabel" binding="ldapIdentityProviderLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
