--- a/modules/gateway/assertions/LookupDynamicContextVariablesAssertion/src/main/java/com/l7tech/external/assertions/lookupdynamiccontextvariables/console/LookupDynamicContextVariablesPropertiesDialog.form
+++ b/modules/gateway/assertions/LookupDynamicContextVariablesAssertion/src/main/java/com/l7tech/external/assertions/lookupdynamiccontextvariables/console/LookupDynamicContextVariablesPropertiesDialog.form
@@ -3,19 +3,14 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="436" height="297"/>
+      <xy x="48" y="54" width="500" height="297"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="500" height="113"/>
+      <preferredSize width="500" height="113"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="d2d64" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="&amp;Lookup Variable"/>
-        </properties>
-      </component>
       <component id="fe691" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -23,14 +18,6 @@
         <properties>
           <text value="&amp;Target Output"/>
         </properties>
-      </component>
-      <component id="93c23" class="javax.swing.JTextField" binding="sourceVariable">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <vspacer id="71ea4">
         <constraints>
@@ -43,6 +30,42 @@
         </constraints>
         <properties/>
       </component>
+      <component id="d2d64" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&amp;Lookup Variable"/>
+        </properties>
+      </component>
+      <grid id="15ff9" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <scrollpane id="b335e">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <horizontalScrollBarPolicy value="32"/>
+              <verticalScrollBarPolicy value="21"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="93c23" class="javax.swing.JTextField" binding="sourceVariable">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
