--- a/modules/gateway/assertions/LookupDynamicContextVariablesAssertion/src/main/java/com/l7tech/external/assertions/lookupdynamiccontextvariables/console/LookupDynamicContextVariablesPropertiesDialog.form
+++ b/modules/gateway/assertions/LookupDynamicContextVariablesAssertion/src/main/java/com/l7tech/external/assertions/lookupdynamiccontextvariables/console/LookupDynamicContextVariablesPropertiesDialog.form
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.external.assertions.lookupdynamiccontextvariables.console.LookupDynamicContextVariablesPropertiesDialog">
-  <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="48" y="54" width="500" height="297"/>
     </constraints>
     <properties>
-      <minimumSize width="500" height="113"/>
-      <preferredSize width="500" height="113"/>
+      <minimumSize width="500" height="150"/>
+      <preferredSize width="500" height="150"/>
     </properties>
     <border type="none"/>
     <children>
       <component id="fe691" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="&amp;Target Output"/>
+          <text value="&amp;Target Variable"/>
         </properties>
       </component>
       <vspacer id="71ea4">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="7beb2" class="com.l7tech.console.panels.TargetVariablePanel" binding="targetVariablePanel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
@@ -35,7 +35,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="&amp;Lookup Variable"/>
+          <text value="&amp;Expression"/>
         </properties>
       </component>
       <grid id="15ff9" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -66,6 +66,20 @@
           </scrollpane>
         </children>
       </grid>
+      <component id="be77a" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Target &amp;Data Type"/>
+        </properties>
+      </component>
+      <component id="fc223" class="javax.swing.JComboBox" binding="dataTypeDropDown">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
